# polymarket-gamma-sdk

./: README.md  pyproject.toml  setup.py
py_gamma_sdk/: client.py  models.py  routes.py  search.txt
tests/: conftest.py  test_live.py  test_models.py  test_search.py
