[project]
name = "polymarket-gamma-sdk"
version = "1.0.0"
description = "Polymarket gamma SDK"
authors = [
    { name = "Marcell O", email = "omarcell@yahoo.com" }
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["py_gamma_sdk"]
